checkpoint: added - swagger openapi yaml on author routes getAuthors, getAuthor and createAuthor
