# swagger.json
@@ -72,6 +72,43 @@
             "description": "Unable to retrieve authors"
           }
         }
+      },
+      "post": {
+        "summary": "Create an author",
+        "tags": [
+          "Authors"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "birthYear": {
+                    "type": "integer"
+                  },
+                  "id": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created an author"
+          },
+          "400": {
+            "description": "Invalid author details or ID already exist"
+          },
+          "500": {
+            "description": "internal server error"
+          }
+        }
       }
     },
     "/authors/{id}": {
